Fix Projects page shifting projects on load. Use Motion for page transition

--- a/src/index.css
+++ b/src/index.css
@@ -31,20 +31,3 @@
         transform: scaleX(1);
     }
 }
-
-/* Page animation */
-.fade-enter {
-    @apply opacity-0;
-}
-
-.fade-enter-active {
-    @apply opacity-100 transition-opacity duration-500;
-}
-
-.fade-exit {
-    @apply opacity-100;
-}
-
-.fade-exit-active {
-    @apply opacity-0 transition-opacity duration-500;
-}
